syntax = "proto3";

service Spotify{
  rpc GetUser(IdGenericRequest) returns (GetUserResponse) {}
  rpc GetAllUsers(Empty) returns (UsersGenericResponse) {}
  rpc GetUserPlaylists(IdGenericRequest) returns (PlaylistsGenericResponse) {}
  rpc AddUser(AddOrUpdateUserRequest) returns (IdGenericResponse) {}
  rpc AddUserPlaylist(AddUserPlaylistRequest) returns (IdGenericResponse) {}
  rpc UpdateUser(AddOrUpdateUserRequest) returns (IdGenericResponse) {}
  rpc DeleteUser(IdGenericRequest) returns (IdGenericResponse) {}
  rpc DeleteUserPlaylist(DeleteUserPlaylistRequest) returns (IdGenericResponse) {}

  rpc GetPlaylist(IdGenericRequest) returns (GetPlaylistResponse) {}
  rpc GetAllPlaylists(Empty) returns (PlaylistsGenericResponse) {}
  rpc GetPlaylistMusics(IdGenericRequest) returns (MusicsGenericResponse) {}
  rpc GetAllPlaylistsWithMusic(IdGenericRequest) returns (PlaylistsGenericResponse) {}
  rpc AddPlaylist(AddOrUpdatePlaylistRequest) returns (IdGenericResponse) {}
  rpc AddPlaylistMusic(AddPlaylistMusicRequest) returns (IdGenericResponse) {}
  rpc UpdatePlaylist(AddOrUpdatePlaylistRequest) returns (IdGenericResponse) {}
  rpc DeletePlaylist(IdGenericRequest) returns (IdGenericResponse) {}
  rpc DeletePlaylistMusic(DeletePlaylistMusicRequest) returns (IdGenericResponse) {}

  rpc GetMusic(IdGenericRequest) returns (GetMusicResponse) {}
  rpc GetAllMusics(Empty) returns (MusicsGenericResponse) {}
  rpc AddMusic(AddOrUpdateMusicRequest) returns (IdGenericResponse) {}
  rpc UpdateMusic(AddOrUpdateMusicRequest) returns (IdGenericResponse) {}
  rpc DeleteMusic(IdGenericRequest) returns (IdGenericResponse) {}
}

message Empty {}

message User{
  int32 id = 1;
  string name = 2;
  int32 age = 3;
  repeated int32 playlists = 4;
}

message Playlist{
  int32 id = 1;
  string name = 2;
  repeated int32 musics = 4;
}

message Music{
  int32 id = 1;
  string name = 2;
  string artist = 3;
}

message IdGenericRequest {
  int32 id = 1;
}

message AddOrUpdateUserRequest{
  User user = 1;
}

message AddUserPlaylistRequest{
  int32 userId = 1;
  int32 playlistId = 2;
}

message DeleteUserPlaylistRequest{
  int32 userId = 1;
  int32 playlistId = 2;
}

message AddOrUpdatePlaylistRequest{
  Playlist playlist = 1;
}

message AddPlaylistMusicRequest{
  int32 playlistId = 1;
  int32 musicId = 2;
}

message DeletePlaylistMusicRequest{
  int32 playlistId = 1;
  int32 musicId = 2;
}

message AddOrUpdateMusicRequest{
  Music music = 1;
}

message IdGenericResponse {
  int32 id = 1;
}

message GetUserResponse{
  User user = 1;
}

message UsersGenericResponse{
  repeated User users = 1;
}

message GetPlaylistResponse{
  Playlist playlist = 1;
}

message PlaylistsGenericResponse{
  repeated Playlist playlists = 1;
}

message GetMusicResponse{
  Music music = 1;
}

message MusicsGenericResponse{
  repeated Music musics = 1;
}